WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183766
[LayoutReloaded] Layout.Box should not create the formatting context.
https://bugs.webkit.org/show_bug.cgi?id=183766
Summary
[LayoutReloaded] Layout.Box should not create the formatting context.
alan
Reported
2018-03-19 21:58:04 PDT
LayoutContext will do it instead.
Attachments
Patch
(12.59 KB, patch)
2018-03-19 22:00 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-03-19 22:00:22 PDT
Created
attachment 336100
[details]
Patch
alan
Comment 2
2018-03-19 22:02:46 PDT
Committed
r229739
: <
https://trac.webkit.org/changeset/229739
>
Radar WebKit Bug Importer
Comment 3
2018-03-19 22:03:32 PDT
<
rdar://problem/38651039
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug